--- a/index.html
+++ b/index.html
@@ -58,12 +58,45 @@
   </header>
 
   <section id="about">
-    <h2>Über mich</h2>
+    <h2>Über uns</h2>
     <p>Ich bin Leonard Peter, Lehramtsstudent für Mathematik am Gymnasium. Seit mehreren Jahren gebe ich erfolgreich Nachhilfe in Mathematik – individuell auf jede:n Schüler:in zugeschnitten und mit Fokus auf echtes Verstehen statt nur Rechnen.</p>
+    <p>Wir setzen auf faire Bezahlung und nachhaltige Qualität: Unsere Preise ermöglichen es uns, unseren Nachhilfelehrer:innen faire Honorare zu zahlen. Nur so können wir langfristig mit motivierten und kompetenten Lehrkräften arbeiten und dir eine hochwertige Nachhilfe bieten.</p>
+    <p>Bei uns besteht direkter Kontakt zu den jeweiligen Nachhilfelehrer:innen – das ermöglicht eine individuelle und flexible Terminplanung. Stunden können unkompliziert verschoben oder bei Bedarf zusätzliche Stunden vereinbart werden. Zusätzlich stehe ich jederzeit als allgemeine Ansprechperson zur Verfügung, falls es Fragen, Anliegen oder Unterstützungsbedarf gibt.</p>
+    <p>Wir setzen auf faire Bezahlung und nachhaltige Qualität: Unsere Preise ermöglichen es uns, unseren Nachhilfelehrer:innen faire Honorare zu zahlen. Nur so können wir langfristig mit motivierten und kompetenten Lehrkräften arbeiten und dir eine hochwertige Nachhilfe bieten.</p>
     <a href="#contact" class="cta-button">Unverbindlich Kontakt aufnehmen</a>
   </section>
 
-  <section id="prices">
+  <section id="offers">
+  <h2>Was wir bieten</h2>
+  <div style="display: flex; flex-direction: column; gap: 2rem;">
+
+  <div style="display: flex; align-items: flex-start; gap: 1rem;">
+    <div style="font-size: 2rem; color: #2a3d8f;">📚</div>
+    <div>
+      <h3>Kontinuierliche Lernbegleitung</h3>
+      <p>In regelmäßigen Nachhilfestunden bauen wir mathematisches Verständnis systematisch auf. Dabei schließen wir gezielt Wissenslücken, vertiefen Grundlagen und schaffen eine stabile Basis für langfristigen Lernerfolg – ideal für alle, die dauerhaft besser in Mathe werden wollen.</p>
+    </div>
+  </div>
+
+  <div style="display: flex; align-items: flex-start; gap: 1rem;">
+    <div style="font-size: 2rem; color: #2a3d8f;">📝</div>
+    <div>
+      <h3>Klausur- & Prüfungs­vorbereitung</h3>
+      <p>Ob Abitur, zentrale Abschlussprüfung oder Mathe-Klausur im Studium – wir bieten gezielte, intensive Vorbereitung auf bevorstehende Prüfungen. Strukturiert, effektiv und individuell zugeschnitten auf die Anforderungen deiner Prüfung.</p>
+    </div>
+  </div>
+
+  <div style="display: flex; align-items: flex-start; gap: 1rem;">
+    <div style="font-size: 2rem; color: #2a3d8f;">⏱️</div>
+    <div>
+      <h3>Flexible Einzelstunden</h3>
+      <p>Du hast eine konkrete Frage aus dem Unterricht, brauchst spontane Hilfe oder willst nur eine kurze Wissenslücke schließen? Kein Problem – unsere flexiblen Einzelstunden stehen dir genau dann zur Verfügung, wenn du sie brauchst.</p>
+    </div>
+  </div>
+</div>
+</section>
+
+<section id="prices">
     <h2>Preise</h2>
     <p><strong>Einzelstunde (60 Minuten): 35 €</strong></p>
     <p><strong>2-Stunden-Paket pro Woche:</strong> 30 € pro Stunde (wöchentlich 2x60 Minuten)</p>
